--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "generate-client": "algokitgen generate -a contracts/artifacts/Tealscript.arc32.json -o contracts/clients/TealscriptClient.ts",
-    "compile-contract": "tealscript contracts/tealscript.algo.ts contracts/artifacts",
-    "generate-components": "algokit-generate-component contracts/artifacts/Tealscript.arc32.json contracts/artifacts/components",
+    "generate-client": "algokitgen generate -a contracts/artifacts/Airdrop.arc32.json -o contracts/clients/AirdropClient.ts",
+    "compile-contract": "tealscript contracts/airdrop.algo.ts contracts/artifacts",
+    "generate-components": "algokit-generate-component contracts/artifacts/Airdrop.arc32.json contracts/artifacts/components",
     "build": "npm run compile-contract && npm run generate-client",
     "test": "npm run build && jest",
     "lint": "eslint . --ext .ts",
